feat: database & user creation + authentication
